# TrackTrimSQLite

./: CMakeLists.txt  README.md  makedb.cpp  testTrackTrimSQLite.cpp
include/: BaseStragglingCalculator.hpp  CollisionDBHandler.hpp  FundamentalConstants.hpp  SrimDataFile.hpp  TRIM2SQLite.hpp  TrackGenerator.hpp  TrackTreeFile.hpp  TrackTrimSQLite.hpp  VectorAndMatrix.hpp  my_sqlite3util.hpp
src/: CollisionDBHadler.cpp  SrimDataFile.cpp  TRIM2SQLite.cpp  TrackGenerator.cpp  TrackTreeFile.cpp  TrackTrimSQLite.cpp
